Implementing Unit Tests

--- a/module1_homework2/MR_code/build.gradle
+++ b/module1_homework2/MR_code/build.gradle
@@ -64,7 +64,7 @@ jar {
         attributes(
            "Implementation-Title": "Gradle",
            "Implementation-Version": version,
-           "Main-Class": "training.bigdata.epam.WordAnalyzer"
+           "Main-Class": "training.bigdata.epam.TrafficAnalyzer"
        )
     }
 
