--- a/module4_homework1/code/build.gradle
+++ b/module4_homework1/code/build.gradle
@@ -31,7 +31,7 @@ shadowJar {
     //exclude('qa-config.properties')
     mergeServiceFiles()
     //here we set a name format of jar file
-    archiveName = "tcodata-spark-qa-framework${version}.${extension}"
+    archiveName = "spark-core-${version}.${extension}"
     zip64 true
 }
 
