--- a/module4_homework1/code/build.gradle
+++ b/module4_homework1/code/build.gradle
@@ -3,6 +3,7 @@ version '1.0-SNAPSHOT'
 
 apply plugin: 'java'
 apply plugin: 'com.github.johnrengelman.shadow'
+apply plugin: 'scala'
 
 version '1.0'
 
@@ -19,6 +20,17 @@ sourceSets {
     main {
         java {
             //exclude 'src/main/resources/qa-config.properties'
+        }
+        scala {
+            srcDirs = ['src/scala']
+        }
+    }
+    test {
+        java {
+            //exclude 'src/main/resources/qa-config.properties'
+        }
+        scala {
+            srcDirs = ['test/scala']
         }
     }
 }
@@ -55,7 +67,8 @@ dependencies {
     compile 'org.hamcrest:hamcrest-library:1.3'
 
     //Scala
-    compile group: 'org.scala-lang', name: 'scala-library'
+    compile 'org.scala-lang:scala-library:2.11.8'
+    compile 'org.scalatest:scalatest_2.11:3.0.0'
 
     //Spark section
     compile 'org.apache.spark:spark-core_2.11:2.2.1'
@@ -63,7 +76,6 @@ dependencies {
     compile 'org.apache.spark:spark-sql_2.11:2.2.1'
     compile 'org.apache.spark:spark-streaming_2.11:2.2.1'
     compile 'com.holdenkarau:spark-testing-base_2.11:2.3.0_0.9.0'
-
 }
 
 
