Spark Streaming homework

--- a/module6_homework1/pom.xml
+++ b/module6_homework1/pom.xml
@@ -105,7 +105,7 @@
                     </descriptorRefs>
                     <archive>
                         <manifest>
-                            <mainClass>com.epam.bdcc.spark.AnomalyDetector</mainClass>
+                            <mainClass>com.epam.bdcc.kafka.TopicGenerator</mainClass>
                         </manifest>
                     </archive>
                 </configuration>
