--- a/module6_homework1/src/main/resources/conf/config.properties
+++ b/module6_homework1/src/main/resources/conf/config.properties
@@ -5,6 +5,7 @@ checkpoint.dir=./checkpoint
 batch.duration=10000
 window.duration=600000
 checkpoint.interval=60000
+spark.serializer=org.apache.spark.serializer.KryoSerializer
 
 #kafka
 raw.topic=monitoring20
@@ -22,4 +23,4 @@ enable.auto.commit=true
 #generator
 skip.header=true
 batch.sleep=0
-sample.file=./data/
+sample.file=C:/abespalov/gitHubRepositories/git-palych-piter/BigDataTraining/module6_homework1/data
