--- a/module6_homework1/pom.xml
+++ b/module6_homework1/pom.xml
@@ -81,6 +81,16 @@
             <artifactId>jackson-annotations</artifactId>
             <version>${jackson.version}</version>
         </dependency>
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter-api</artifactId>
+            <version>RELEASE</version>
+        </dependency>
+        <dependency>
+            <groupId>com.holdenkarau</groupId>
+            <artifactId>spark-testing-base_2.11</artifactId>
+            <version>2.3.1_0.10.0</version>
+        </dependency>
     </dependencies>
 
     <build>
